- Nav color change. - Removed links above the header search box. - Removed social links and moved RSS feed icon to the nav. - Fixed missing background image on the home page. - Changed button color on the main page.

--- a/ckanext/open_alberta/fanstatic/css/main.css
+++ b/ckanext/open_alberta/fanstatic/css/main.css
@@ -2531,5 +2531,11 @@ select, select.form-control, input.form-control { -webkit-transition: color 500m
 }
 
 .homepage, div[role=main], main {
-    background: #fff;
+    background-color: #fff;
+}
+
+.alberta-theme .btn.btn-info {
+    background-color: #6d9324;
+    border: none;
+    color: #fff;
 }
